# Tree-menu

./: .dockerignore  .flake8  .prettierignore  Dockerfile  README.md  pyproject.toml  setup.cfg
DjangoApp/: db.sqlite3
DjangoApp/Menu/: admin.py  models.py  urls.py  views.py
DjangoApp/Menu/migrations/: 0001_initial.py
DjangoApp/Menu/static/Menu/: style.css
DjangoApp/Menu/templates/Menu/: menu_pattern.html
DjangoApp/Menu/templatetags/: menu_tag.py
DjangoApp/django_config/: asgi.py  settings.py  urls.py  wsgi.py
DjangoApp/templates/: index.html
DjangoApp/templates/Menu/: menu_pattern.html
